[package]
name = "project_code"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] } # pour appeler l'API Hugging Face
tokio = { version = "1", features = ["full"] }     # pour gérer l'asynchrone
serde = { version = "1.0", features = ["derive"] } # pour sérialiser/désérialiser JSON
serde_json = "1.0"                                 # pour manipuler JSON
anyhow = "1.0" 

# Added HTTP client, async runtime, and error handling
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
dotenvy = "0.15"
