[package]
name = "project_code"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP + Async, SANS OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Gestion des erreurs
anyhow = "1.0"

# Variables d'environnement (.env)
dotenvy = "0.15"

# Optionnel si vous l'utilisez encore
rand = "0.8"
